// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HTMLView/> can use a custom node class 1`] = `
<View
  style={undefined}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        null,
        null,
      ]
    }
  >
    
          
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onLongPress={null}
    onPress={null}
    selectable={false}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          null,
          Array [
            Object {},
          ],
        ]
      }
    >
      
              
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      onLongPress={null}
      onPress={null}
      selectable={false}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            null,
            Array [
              Object {},
              Object {},
            ],
          ]
        }
      >
        
              
      </Text>
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          null,
          Array [
            Object {},
          ],
        ]
      }
    >
      
          
    </Text>
  </Text>
</View>
`;

exports[`<HTMLView/> can use a custom renderer 1`] = `
<View
  style={undefined}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        null,
        null,
      ]
    }
  >
    
          
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onLongPress={null}
    onPress={null}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          null,
          Array [
            Object {},
          ],
        ]
      }
    >
      
              
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    />
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        null,
        null,
      ]
    }
  >
    
        
  </Text>
</View>
`;

exports[`<HTMLView/> can use custom node props 1`] = `
<View
  style={undefined}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        null,
        null,
      ]
    }
  >
    
          
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onLongPress={null}
    onPress={null}
    selectable={false}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          null,
          Array [
            Object {},
          ],
        ]
      }
    >
      
              
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      onLongPress={null}
      onPress={null}
      selectable={false}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            null,
            Array [
              Object {},
              Object {},
            ],
          ]
        }
      >
        
              
      </Text>
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          null,
          Array [
            Object {},
          ],
        ]
      }
    >
      
          
    </Text>
  </Text>
</View>
`;

exports[`<HTMLView/> should handle additional text nodes between list items 1`] = `
<View
  style={undefined}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onLongPress={null}
    onPress={null}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          null,
          Array [
            Object {},
          ],
        ]
      }
    >
      
            
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      onLongPress={null}
      onPress={null}
    >
      1. 
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            null,
            Array [
              Object {},
              Object {},
            ],
          ]
        }
      >
         a 
      </Text>
      
      
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          null,
          Array [
            Object {},
          ],
        ]
      }
    >
      
            
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      onLongPress={null}
      onPress={null}
    >
      2. 
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            null,
            Array [
              Object {},
              Object {},
            ],
          ]
        }
      >
         b 
      </Text>
      
      
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          null,
          Array [
            Object {},
          ],
        ]
      }
    >
      
          
    </Text>
  </Text>
</View>
`;

exports[`<HTMLView/> should not render extra linebreaks if configured not to 1`] = `
<View
  style={undefined}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        null,
        null,
      ]
    }
  >
    
          
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onLongPress={null}
    onPress={null}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          null,
          Array [
            Object {},
          ],
        ]
      }
    >
      
                
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      onLongPress={null}
      onPress={null}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            null,
            Array [
              Object {
                "fontSize": 30,
                "fontWeight": "500",
              },
              Object {},
            ],
          ]
        }
      >
        Dwayne’s only companion at night was a Labrador retriever named Sparky.
      </Text>
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          null,
          Array [
            Object {},
          ],
        ]
      }
    >
      
              
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      onLongPress={null}
      onPress={null}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            null,
            Array [
              Object {},
              Object {},
            ],
          ]
        }
      >
        
                Sparky could not wag his tail-because of an automobile accident many years ago, so he had no way of telling other dogs how friendly he was.
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        onLongPress={null}
        onPress={null}
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            null,
            Array [
              Object {},
              Object {},
            ],
          ]
        }
      >
        
                He opened the door of the cage, something Bill couldn’t have done in a thousand years. Bill flew over to a windowsill.
                
      </Text>
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          null,
          Array [
            Object {},
          ],
        ]
      }
    >
      
            
    </Text>
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        null,
        null,
      ]
    }
  >
    
        
  </Text>
</View>
`;

exports[`<HTMLView/> should render an <Image /> with set width/height 1`] = `
<View
  style={undefined}
>
  <Image
    source={
      Object {
        "height": 58,
        "uri": "https://facebook.github.io/react-native/img/header_logo.png",
        "width": 66,
      }
    }
    style={
      Object {
        "backgroundColor": "transparent",
        "height": 58,
        "width": 66,
      }
    }
  />
</View>
`;

exports[`<HTMLView/> should render an <Image />, with default width/height of 1 1`] = `
<View
  style={undefined}
>
  <Image
    source={
      Object {
        "height": 1,
        "uri": "https://facebook.github.io/react-native/img/header_logo.png",
        "width": 1,
      }
    }
    style={
      Object {
        "backgroundColor": "transparent",
        "height": 1,
        "width": 1,
      }
    }
  />
</View>
`;

exports[`<HTMLView/> should render an empty <Text/> element 1`] = `
<View
  style={undefined}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onLongPress={null}
    onPress={null}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      onLongPress={null}
      onPress={[Function]}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            null,
            Array [
              Object {
                "color": "#007AFF",
                "fontWeight": "500",
              },
              Object {},
            ],
          ]
        }
      >
        &hearts nice job!
      </Text>
    </Text>
  </Text>
</View>
`;

exports[`<HTMLView/> should render ol numbers 1`] = `
<View
  style={undefined}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onLongPress={null}
    onPress={null}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      onLongPress={null}
      onPress={null}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            null,
            Array [
              Object {},
            ],
          ]
        }
      >
        1. 
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            null,
            Array [
              Object {},
              Object {},
            ],
          ]
        }
      >
         a 
      </Text>
      
      
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      onLongPress={null}
      onPress={null}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            null,
            Array [
              Object {},
            ],
          ]
        }
      >
        2. 
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            null,
            Array [
              Object {},
              Object {},
            ],
          ]
        }
      >
         b 
      </Text>
      
      
    </Text>
  </Text>
</View>
`;

exports[`<HTMLView/> should render shoddy html including headings, links, bold, italic 1`] = `
<View
  style={undefined}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        null,
        null,
      ]
    }
  >
    
          
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onLongPress={null}
    onPress={null}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          null,
          Array [
            Object {},
          ],
        ]
      }
    >
      
              
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      onLongPress={null}
      onPress={null}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            null,
            Array [
              Object {},
              Object {},
            ],
          ]
        }
      >
        
                  
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        onLongPress={null}
        onPress={null}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              null,
              Array [
                Object {
                  "fontSize": 30,
                  "fontWeight": "500",
                },
                Object {},
                Object {},
              ],
            ]
          }
        >
          &gt; Dwayne’s only companion at night was a Labrador retriever named Sparky.
        </Text>
        
        
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            null,
            Array [
              Object {},
              Object {},
            ],
          ]
        }
      >
        
                
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        onLongPress={null}
        onPress={null}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              null,
              Array [
                Object {},
                Object {},
                Object {},
              ],
            ]
          }
        >
          
                  
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          onLongPress={null}
          onPress={null}
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                null,
                Array [
                  Object {
                    "fontStyle": "italic",
                  },
                  Object {},
                  Object {},
                  Object {},
                ],
              ]
            }
          >
            Sparky could not wag his tail-because of an automobile accident many years ago, so he had no way of telling other dogs how friendly he was.
                    He opened the door of the cage, something Bill couldn’t have done in a thousand years. Bill flew over to a windowsill.
                    
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            onLongPress={null}
            onPress={null}
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  null,
                  Array [
                    Object {
                      "fontWeight": "500",
                    },
                    Object {
                      "fontStyle": "italic",
                    },
                    Object {},
                    Object {},
                    Object {},
                  ],
                ]
              }
            >
              The undippable flag was a beauty, and the anthem and the vacant motto might not have mattered much, if it weren’t for this: a lot of citizens were so ignored and cheated and insulted that they thought they might be in the wrong country, or even on the wrong planet, that some terrible mistake had been made.
                      
            </Text>
          </Text>
        </Text>
        
        
        
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            null,
            Array [
              Object {},
              Object {},
            ],
          ]
        }
      >
        
                
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        onLongPress={null}
        onPress={null}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              null,
              Array [
                Object {},
                Object {},
                Object {},
              ],
            ]
          }
        >
          
                    [1] 
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          onLongPress={null}
          onPress={[Function]}
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                null,
                Array [
                  Object {
                    "color": "#007AFF",
                    "fontWeight": "500",
                  },
                  Object {},
                  Object {},
                  Object {},
                ],
              ]
            }
          >
            https://code.facebook.com/posts/1505962329687926/flow-a-new-...
          </Text>
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              null,
              Array [
                Object {},
                Object {},
                Object {},
              ],
            ]
          }
        >
          
                  
        </Text>
        
        
        
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            null,
            Array [
              Object {},
              Object {},
            ],
          ]
        }
      >
        
              
      </Text>
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          null,
          Array [
            Object {},
          ],
        ]
      }
    >
      
          
    </Text>
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        null,
        null,
      ]
    }
  >
    
        
  </Text>
</View>
`;

exports[`<HTMLView/> should render text in a (nested) <Text/> element 1`] = `
<View
  style={undefined}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        null,
        null,
      ]
    }
  >
    This is some text
  </Text>
</View>
`;

exports[`<HTMLView/> should render ul bullets 1`] = `
<View
  style={undefined}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onLongPress={null}
    onPress={null}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      onLongPress={null}
      onPress={null}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            null,
            Array [
              Object {},
            ],
          ]
        }
      >
        • 
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            null,
            Array [
              Object {},
              Object {},
            ],
          ]
        }
      >
         a 
      </Text>
      
      
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      onLongPress={null}
      onPress={null}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            null,
            Array [
              Object {},
            ],
          ]
        }
      >
        • 
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            null,
            Array [
              Object {},
              Object {},
            ],
          ]
        }
      >
         b 
      </Text>
      
      
    </Text>
  </Text>
</View>
`;
